--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,8 @@
 {
-  "bracketSpacing": true,
-  "singleQuote": true,
-  "trailingComma": "all",
-  "tabWidth": 2,
+  "arrowParens": "avoid",
   "semi": false,
-  "printWidth": 120,
-  "jsxSingleQuote": true,
-  "endOfLine": "auto"
+  "printWidth": 80,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "all"
 }
