--- a/package.json
+++ b/package.json
@@ -1,22 +1,40 @@
 {
-  "name": "usehooks",
+  "name": "awesome-react-hooks",
+  "private": false,
+  "description": "A collection of Awesome React hooks to speed-up your components and hooks development",
+  "author": "Sadam Khan <sadamhussain942@gmail.com>",
+  "homepage": "https://usehooks-ts.com",
   "version": "1.0.0",
-  "description": "",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sadamkhan7679/awesome-react-hooks"
+  },
   "scripts": {
-    "build": "yarn build:esm && yarn build:cjs",
-    "build:esm": "tsc",
-    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
     "prettier": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\"",
     "test": "jest --config jestconfig.json",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run prettier && npm run lint"
-  },
-  "peerDependencies": {
-    "react": ">=16.8"
+    "prepublishOnly": "npm test",
+    "dev": "npm run test:watch",
+    "prebuild": "npm run clean && npm run test",
+    "build": "npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc -p tsconfig.build.json --module commonjs --outDir dist/cjs --target es5",
+    "build:esm": "tsc -p tsconfig.build.json --module esNext --outDir dist/esm --target es6",
+    "postbuild": "npm run copy:hooks && npm run update:readme",
+    "pretest": "npm run lint && npm run types-check",
+    "test:watch": "npm run test -- --watch --silent",
+    "test:coverage": "ts-node ./scripts/coverage.ts",
+    "clean": "rimraf -rf ./dist",
+    "format": "prettier --write \"**/*.{json,md,mdx,css,scss,yaml,yml}\"",
+    "types-check": "tsc --noEmit",
+    "bump": "bump --tag 'usehooks-ts@%s' --commit 'release: usehooks-ts@%s'",
+    "deploy": "npm run test && npm run bump && npm publish",
+    "update:readme": "ts-node ./scripts/updateReadme.ts",
+    "copy:hooks": "rimraf -rf ./website/generated && ts-node ./scripts/copyHooks.ts",
+    "plop": "plop && npm run update:readme && npm run format"
   },
   "files": [
     "dist",
@@ -26,28 +44,64 @@
   "keywords": [
     "react",
     "typescript",
-    "awesome-project"
+    "awesome-project",
+    "react-hooks",
+    "custom-hooks",
+    "custom-react-hooks",
+    "reusable-hooks",
+    "reusable-react-hooks",
+    "useful-react-hooks",
+    "useful-hooks",
+    "react-hooks-library",
+    "react-hooks-collection",
+    "use-react-hooks"
   ],
-  "author": "Igor Gaponov (gapon2401)",
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "MIT",
+  "workspaces": [
+    "packages/eslint-config-custom"
+  ],
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^29.2.5",
+    "@types/node": "^18.7.18",
     "@types/react": "^18.0.26",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "all-contributors-cli": "^6.20.0",
+    "date-fns": "^2.29.3",
     "eslint": "^8.31.0",
+    "eslint-config-custom": "./packages/eslint-config-custom",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-tree-shaking": "^1.10.0",
     "jest": "^29.3.1",
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.3.1",
+    "plop": "^3.0.5",
     "prettier": "^2.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.9.4"
+    "ts-node": "^10.2.1",
+    "typescript": "^4.8.3",
+    "version-bump-prompt": "^6.1.0"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0  || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
+  },
+  "engines": {
+    "node": ">=16.15.0",
+    "npm": ">=8"
   }
 }
